--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -358,6 +358,17 @@ nav {
     width: 160px !important;
 }
 
+.reportUrl {
+    margin-bottom:2px;
+    margin-left: 4px; 
+    padding-left: 4px; 
+    padding-right: 4px;
+}
+
+.reportUrl:hover {
+    background-color: transparent;
+}
+
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
 /* ------------------------------------------------------------------------ Pushpin with Scrollspy ------------------------------------------------------------------------------ */
@@ -608,6 +619,16 @@ nav {
     line-height: 15px;
     letter-spacing: .5px;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+/* --------------------------------------------------------------------------- Delete Modal ------------------------------------------------------------------------------------- */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+#deleteModal { 
+    max-width: 35%;
+    max-height: 25%;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
