--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -848,8 +848,8 @@
                 {% verbatim %}
                 <a class="waves-effect btn-flat right reportUrl btn-small" ng-show="(report_client_status == 'SUCCESS' || report_client_status == 'FAILED') && report_log_url" ng-href="{{report_log_url}}">Logs</a>
                 <a class="waves-effect btn-flat right reportUrl btn-small" ng-show="(report_client_status == 'SUCCESS' || report_client_status == 'FAILED') && report_url" ng-href="{{report_url}}">Report</a>
-                <a class="waves-effect btn-flat right reportUrl btn-small" ng-show="report_monitor_url" ng-href="{{report_monitor_url}}">Monitor Resources</a>
-                <a class="waves-effect btn-flat right reportUrl btn-small" ng-show="report_visualization_url" ng-href="{{report_visualization_url}}">Moninor Execution</a>
+                <a class="waves-effect btn-flat right reportUrl btn-small" ng-show="report_monitor_url" ng-href="{{report_monitor_url}}" target="_blank">Monitor Resources</a>
+                <a class="waves-effect btn-flat right reportUrl btn-small" ng-show="report_visualization_url" ng-href="{{report_visualization_url}}" target="_blank">Moninor Execution</a>
                 {% endverbatim %}
             </div>
             <div class="left-align" style="margin-top: 5px; margin-bottom: 5px;" ng-show="report_client">
