change repo name

--- a/OpenBio/app/templates/app/navbar2.html
+++ b/OpenBio/app/templates/app/navbar2.html
@@ -14,7 +14,7 @@
                 </span>
                 <span class="brand-logo center black-text" style="font-size: 14px; top: 20px;">
                     Version: {{version}} 
-                    <a href="https://github.com/kantale/OpenBioC" target="_blank">Source</a>
+                    <a href="https://github.com/kantale/OpenBio.eu" target="_blank">Source</a>
                     {% if TERMS %}<a href="{{TERMS}}">Terms</a>{% endif %}
                     {% if PRIVACY %}<a href="{{PRIVACY}}">Privacy</a>{% endif %}
                 </span>
@@ -26,7 +26,7 @@
                 </span>
                 <span class="brand-logo left black-text" style="font-size: 14px; top: 20px;">
                     Version: {{version}} 
-                    <a href="https://github.com/kantale/OpenBioC" target="_blank">Source</a>
+                    <a href="https://github.com/kantale/OpenBio.eu" target="_blank">Source</a>
                 </span>
             </div>
             <a id="navMenuBtn" href="#" data-target="mobile-nav" class="sidenav-trigger right black-text"><i class="material-icons">menu</i></a>
@@ -34,7 +34,7 @@
             <ul id="main-nav" class="right hide-on-med-and-down">
                 <!-- <li><a class="black-text" href ng-click="navbar_home_clicked()">Home</a></li> -->
                 <!-- <li><a class="black-text" ng-click="documenation_navbar_clicked()">Documentation</a></li> -->
-                <li><a class="black-text" href="https://github.com/kantale/OpenBioC/tree/master/Documentation" target="_blank">Documentation</a></li>
+                <li><a class="black-text" href="https://github.com/kantale/OpenBio.eu/tree/master/Documentation" target="_blank">Documentation</a></li>
                 <li ng-show="!username"><a href="#signModal" id="signInBtn" class="modal-trigger black-text" ng-click="navbar_signup_pressed()">Sign in</a></li> <!-- href="#signModal" -->
                 <li ng-show="username">
                     <a class="dropdown-trigger valign-wrapper black-text" href="#" data-target="profile">
