--- a/OpenBio/app/templates/app/right_panel.html
+++ b/OpenBio/app/templates/app/right_panel.html
@@ -495,6 +495,7 @@
                         <li><a ng-click="workflow_info_download_pressed('CWLTARGZ')">CWL tar.gz</a></li>
                         <li><a ng-click="workflow_info_download_pressed('CWLZIP')">CWL zip</a></li>
                         <li><a ng-click="workflow_info_download_pressed('AIRFLOW')">Airflow</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('ARGO')">Argo</a></li>
                     </ul>
                 </div>
                 <div class="left-align" style="margin-top: 5px; margin-bottom: 5px;">
