export to snakemake

--- a/OpenBio/app/templates/app/right_panel.html
+++ b/OpenBio/app/templates/app/right_panel.html
@@ -497,6 +497,7 @@
                         <li><a ng-click="workflow_info_download_pressed('AIRFLOW')">Airflow</a></li>
                         <li><a ng-click="workflow_info_download_pressed('ARGO')">Argo</a></li>
                         <li><a ng-click="workflow_info_download_pressed('NEXTFLOW')">Nextflow</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('SNAKEMAKE')">Snakemake</a></li>
                     </ul>
                 </div>
                 <div class="left-align" style="margin-top: 5px; margin-bottom: 5px;">
