--- a/OpenBio/app/static/app/konstantina/css/style.css
+++ b/OpenBio/app/static/app/konstantina/css/style.css
@@ -675,3 +675,13 @@ nav {
 .tabs .indicator {
     background-color:#26a69a;
 }
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+/* ---------------------------------------------------------------------------------- Text -------------------------------------------------------------------------------------- */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+.font13 {
+    font-size: 13px;
+    font-weight: bold;
+}
