--- a/OpenBio/app/templates/app/profile.html
+++ b/OpenBio/app/templates/app/profile.html
@@ -60,15 +60,18 @@
                                                     <label for="profileLastname">Lastname</label>
                                                 </div>
                                                 <div class="input-field col s12">
-                                                    <input id="ordid_id" type="text" class="validate" disabled>
-                                                    <label for="ordid_id"><img alt="ORCID logo" src="/static/app/images/konstantina/orcid_16x16.png" width="16" height="16" style="margin-bottom: -3px;" /> ORCID iD</label>
-                                                    <a class="waves-effect waves-teal btn-flat right tooltipped" data-position="bottom" data-tooltip="Connect to ORCID" style="margin-top: -45px; width: auto;" ng-click="">Connect</a>
+                                                    {% verbatim %}
+                                                    <input id="ordid_id" type="text" class="validate" value="{{ profile_ORCID ? profile_ORCID : 'Not associated with ORCID' }}" disabled>
+                                                    <label for="ordid_id"><img alt="ORCID logo" src="/static/app/images/orcid_16x16.png" width="16" height="16" style="margin-bottom: -3px; ">ORCID iD</label>
+                                                    <a href="/platform/login/orcid-sandbox/" class="waves-effect waves-teal btn-flat right tooltipped" data-position="bottom" data-tooltip="Associate with ORCID" style="margin-top: -45px; width: auto;" ng-show="!profile_ORCID">Associate</a>
+                                                    <a class="waves-effect waves-teal btn-flat right tooltipped" data-position="bottom" data-tooltip="Disassociate with ORCID" style="margin-top: -45px; width: auto;" ng-click="profile_orcid_disconnect_pressed()" ng-show="profile_ORCID">Disassociate</a>
+                                                    {% endverbatim %}
                                                 </div>
-                                                <div class="input-field col s12">
-                                                    <input id="ordid_id" type="text" class="validate" disabled value="0000-1234-1234-1234">
-                                                    <label for="ordid_id"><img alt="ORCID logo" src="/static/app/images/konstantina/orcid_16x16.png" width="16" height="16" style="margin-bottom: -3px;" /> ORCID iD</label>
-                                                    <a class="waves-effect waves-light btn right tooltipped" data-position="bottom" data-tooltip="Disconnect from ORCID" style="margin-top: -45px; width: auto;" ng-click="">Disassociate</a>
-                                                </div>
+                                         <!--       <div class="input-field col s12">
+                                                    <input id="ordid_id" type="text" class="validate" ng-model="profile_ORCID" disabled>
+                                                    <label for="ordid_id"><img alt="ORCID logo" src="/static/app/images/orcid_16x16.png" width="16" height="16" style="margin-bottom: -3px;" /> ORCID iD</label>
+
+                                                </div> --> 
                                             </div>
                                         </div>
                                         <div class="input-field col s12">
