--- a/OpenBio/app/templates/app/right_panel.html
+++ b/OpenBio/app/templates/app/right_panel.html
@@ -1156,6 +1156,16 @@
                                     <div class="col s12 m9 grid-s12-m9-l9"><span ng-bind="references_BIBTEX"></span>
                                     </div>
                                 </div>
+                                <div class="row left-align">
+                                    <div class="col s12 m3 grid-s12-m3-l3"><b>Claimed by:</b></div>
+                                    <div class="col s12 m9 grid-s12-m9-l9">
+                                        <div ng-repeat="r in references_claim_list">
+                                            <a ng-click="interlink({type: 'u', username: r})">u/<span ng-bind="r"></span></a>
+                                            <span ng-show="!$last">, </span>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
