layout orcid changes

--- a/OpenBio/app/templates/app/left_panel.html
+++ b/OpenBio/app/templates/app/left_panel.html
@@ -130,7 +130,7 @@
 
         </div>
 
-        <ul id="searchResultsCollapsible" class="collapsible expandable popout">
+        <ul id="searchResultsCollapsible" class="collapsible expandable">
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
             <!-- ------------------------------------------------ Tools / Data Left Panel ------------------------------------------------------------------------ -->
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
