javascript test signup

--- a/OpenBio/app/templates/app/index.html
+++ b/OpenBio/app/templates/app/index.html
@@ -234,10 +234,11 @@
 			{% include "app/documentation.html" %}
 		</div>
 
-
-		{# include "app/navbar.html" #}
-		<!-- AK version -->
-		{# include "app/navbar_default.html" #}
+		{% comment %}
+			{# include "app/navbar.html" #}
+			<!-- AK version -->
+			{# include "app/navbar_default.html" #}
+		{% endcomment %}
 
 
 		<!-- <div class="container py-5" ng-show="show_login"> -->
