--- a/OpenBio/app/templates/app/navbar.html
+++ b/OpenBio/app/templates/app/navbar.html
@@ -4,6 +4,8 @@ https://getbootstrap.com/docs/4.0/components/navbar/#supported-content
 
 Items to the right how to:
 https://stackoverflow.com/a/20362024/5626738
+
+!!!NOT USED!!!
 {% endcomment %}
 
 
