--- a/OpenBio/app/templates/app/navbar2.html
+++ b/OpenBio/app/templates/app/navbar2.html
@@ -104,8 +104,7 @@
                     </p>
                 </div>
                 <div class="row col s12" style="margin-bottom: 0px;">
-                    <button class="btn waves-effect waves-light" name="action" ng-click="login_login_pressed()">Sign
-                        in</button> <!-- modal-close-->
+                    <button id="signinbtn" class="btn waves-effect waves-light" name="action" ng-click="login_login_pressed()">Sign in</button> <!-- modal-close-->
                     <p style="margin: 0px;">
                         <small class="form-text text-muted">
                             <a ng-click="signup_forgot_password_clicked()">Forgot Password?</a>
