--- a/OpenBio/app/templates/app/signup.html
+++ b/OpenBio/app/templates/app/signup.html
@@ -1,6 +1,7 @@
 {% comment %}
 Style taken from here: https://www.codeply.com/go/nhbdi2FkJm/bootstrap-4-login-form 
 
+!!! NOT USED !!! 
 {% endcomment %}
 
 <div class="row" ng-show="signup_error_message">
