--- a/OpenBio/app/templates/app/navbar_default.html
+++ b/OpenBio/app/templates/app/navbar_default.html
@@ -1,3 +1,7 @@
+<!--
+ !!! NOT USED !!!
+-->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
