--- a/OpenBio/app/templates/app/right_panel.html
+++ b/OpenBio/app/templates/app/right_panel.html
@@ -53,7 +53,10 @@
                     <a class="dropdown-trigger btn" data-target='runDropdownTool' style="margin-bottom:2px" ng-disabled="profile_clients.length<=1">Run</a>
                     <a class="dropdown-trigger btn" data-target='downloadDropdownTool' style="margin-bottom:2px">Download</a>
                     <a id="tool_save_button_id" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                        data-tooltip="Save" ng-click="tool_create_save_pressed()" ng-show="tools_info_editable"><i
+                        data-tooltip="Save Public" ng-click="tool_create_save_pressed('public')" ng-show="tools_info_editable"><i
+                            class="material-icons">save</i></a>
+                    <a id="tool_save_button_id" class="waves-effect waves-light btn tooltipped cyan-text text-darken-4" style="margin-bottom:2px" data-position="bottom"
+                        data-tooltip="Save Private" ng-click="tool_create_save_pressed('private')" ng-show="tools_info_editable"><i
                             class="material-icons">save</i></a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                         data-tooltip="Fork" ng-click="tool_info_fork_pressed()" ng-show="!tools_info_editable"
@@ -475,7 +478,9 @@
                         data-tooltip="Clear" ng-click="workflow_info_clear_pressed()"
                         ng-disabled="!workflows_info_editable">Clear</a>
                     <a id="workflow_save_button_id" class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                        data-tooltip="Save" ng-click="workflows_create_save_pressed()"
+                        data-tooltip="Save Public" ng-click="workflows_create_save_pressed('public')"
+                        ng-show="workflows_info_editable"><i class="material-icons">save</i></a>
+                    <a id="workflow_save_button_id" class="waves-effect waves-light btn tooltipped cyan-text text-darken-4" style="margin-bottom:2px"    data-position="bottom" data-tooltip="Save Private" ng-click="workflows_create_save_pressed('private')"
                         ng-show="workflows_info_editable"><i class="material-icons">save</i></a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                         data-tooltip="Fork" ng-click="workflows_info_fork_pressed('FORK')" ng-show="!workflows_info_editable"
